@@ -1,3 +1,6 @@
+2008-12-02 rafael
+* Disable Acquire Local Roles in Credit Cards (as done in Bank Account)
+
 2008-11-13 yusei
 * Start to develop version 5.4.
 
